addons/website/static/src/scss/website.scss
/* ... */
// Search results
.o_searchbar_form .o_dropdown_menu, .o_searchbar_result {
    container-type: inline-size;
    container-name: search-results;
}

.o_search_result_item {
    .o_search_result_image {
        width: 32px;
        height: 32px;
        object-fit: cover;
        background-color: color-mix(in srgb, $text-muted 12%, transparent);
    }

    .o_search_result_content {
        flex-direction: var(--o-search-result-content-flex-direction, column);
        justify-content: var(--o-search-result-content-justify-content, center);
    }

    .o_search_tags_highlight {
        margin-top: var(--o-search-tags-highlight-margin-top, map-get($spacers, 1));
    }

    &:not(.o_search_result_item_placeholder):hover,
    & .o_search_result_link:focus-visible {
        background-color: var(--dropdown-link-hover-bg);
    }

    .o_search_result_link:focus-visible {
        outline: $border-width * 2 solid $primary;
        outline-offset: -($border-width * 2);
    }

    @container search-results (min-width: #{map-get($grid-breakpoints, md)}) {
        --o-search-result-content-flex-direction: row;
        --o-search-result-content-justify-content: space-between;
        --o-search-tags-highlight-margin-top: 0;

        .o_search_result_link {
            align-items: center;
        }

        .o_search_tags_highlight {
            justify-content: flex-end;
        }

        .o_search_result_content {
            justify-content: space-between;
            gap: map-get($spacers, 2);
        }

        .o_search_result_description {
            max-width: 50%;
            text-align: end;
        }
    }
}

ul.o_checklist > li.o_checked::after {
    left: - ($o-checklist-margin-left - $o-checklist-checkmark-width) - 1;
    top: 0;
}

// Bottom fixed element (e.g. livechat button)
.modal-open .o_bottom_fixed_element, .o_bottom_fixed_element_hidden {
    // Prevent bottom fixed elements from hidding buttons and
    // hide them if a modal is open.
    display: none !important;
}

// On translation editor, inputs & textareas with translatable "placeholder" and
// "value" will get HTML content as translation value for the attributes.
// The goal here is to hide these values until the editor's code sets the right
// ones on elements. The `o_text_content_invisible` class is mainly used on JS
// to have the same behaviour for textareas, since it's not possible to target
// them on CSS using the "value" attribute unlike inputs.
.o_text_content_invisible {
    color: transparent !important;
}
[placeholder*="data-oe-translation-source-sha"] {
    &::-webkit-input-placeholder{ /* WebKit */
        color: transparent;
        opacity: 0;
    }
    &::-moz-placeholder { /* Firefox */
        color: transparent;
        opacity: 0;
    }
}
input[value*="data-oe-translation-source-sha"] {
    @extend .o_text_content_invisible;
}

.o_translation_select + select {
    // Hide translatable `<select/>`s since we use `.o_translation_select`
    // elements to handle translations.
    display: none !important;
}

// Offcanvas menu for in page filters (e.g. product list)
.o_website_offcanvas .accordion-button {
    // Since this nav is visible on mobile only, remove all visual
    // effects related to keyboard/mouse navigation.
    &, &:focus, &:hover {
        box-shadow: none;
        z-index: 0;
    }
}

// Notification
.o_notification_manager .o_notification {
    --Notification__background-color: #{$body-bg};
}

//------------------------------------------------------------------------------
// Website Animate
//------------------------------------------------------------------------------

.o_animate {
    // Elements with an animation must always be above the elements that are
    // around so that the animation is fully visible.
    z-index: 1;
    animation-duration: 1s;
    animation-fill-mode: both;
    transform: translate3d(0,0,0); // force GPU acceleration
    backface-visibility: hidden; // avoid flickering
    text-rendering: geometricPrecision; // take care of animated titles
    visibility: hidden;
    --wanim-intensity: 50;
    --wanim-intensity-squared: calc(var(--wanim-intensity) * var(--wanim-intensity));
    --wanim-zoom-out-scale: calc(1 + (var(--wanim-intensity-squared) / 8333.3));
    --wanim-zoom-in-scale: calc(1.01 - (var(--wanim-intensity) / 100 ));
    --wanim-zoom-in-scale-60: calc(var(--wanim-zoom-in-scale) + ((1 - var(--wanim-zoom-in-scale)) / 2));
    --wanim-opacity-adjustment: 0;

    &:not(.o_animating):not(.o_animate_in_dropdown) {
        transform: none !important;
    }
}
.o_animate_preview {
    visibility: visible;
}
.o_wanim_overflow_xy_hidden {
    // "overflow-x: clip" is added to the "#wrapwrap" and not to "html" because
    // if it's added to "html", when a popup opens, the page scrolls to the top.
    // It's not added on body because mobile browser ignore overflow-x on it.
    #wrapwrap {
        // We use clip instead of hidden to prevent scroll animations to an
        // anchor from stopping working.
        overflow-x: clip !important;
        // For supporting browsers not updated since around 2021-2022.
        @supports not (overflow-x: clip) {
            overflow-x: hidden !important;
        }
    }
    &.o_rtl, .o_rtl {
        // Fix for Chrome and Edge bug: resolves slow/stuck scrolling during
        // left-overflowing animations on RTL web pages. Note: using overflow on
        // the main element hides animated elements outside of it (e.g. "Framed"
        // page layout). This may not be the ideal solution but could be the
        // best workaround for now.
        > main {
            overflow-x: hidden;
            overflow-y: hidden;
        }
    }
    .o_footer_slideout {
        overflow-y: hidden !important;
    }
}
.o_animated_text {
    display: inline-block;
}
.o_animate_on_scroll {
    animation-play-state: paused;
    --wanim-opacity-adjustment: 1;
}
/* ... */

